--- a/public/device/device_index.html
+++ b/public/device/device_index.html
@@ -6,7 +6,7 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Name</th>
+                    <th width="100px">Name</th>
                     <th>Date Created</th>
                 </tr>
             </thead>
