--- a/public/device/device_index.html
+++ b/public/device/device_index.html
@@ -18,7 +18,7 @@
                 <td>{{ .Device_id }}</td>
                 <td>{{ .Device_name }}</td>
                 <td>{{ .Date_updated }}</td>
-                <td>{{ .Capacity }}</td>
+                <td>{{ .Capacity }}%</td>
             </tr>
             {{ end }}
         </tbody>
