--- a/public/device/device_index.html
+++ b/public/device/device_index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <div class="container">
-    <h1 class="mt-4">History Kapasitas Tempat Sampah</h1>
+    <h1 class="mt-4">History Kapasitas Tempat Sampaah</h1>
     <table class="table mt-4">
         <thead>
             <tr width="200px">
